# Nessy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cpu_thread.rs  main.rs  nestest.rs  ppu_thread.rs
src/core/: byte.rs  consts.rs  cpu.rs  double.rs  errors.rs  instructions.json  instructions.rs  memory.rs  mod.rs
src/cpu/: byte.rs  consts.rs  cpu.rs  cpu_tests.rs  errors.rs  memory.rs  mod.rs
src/mapper/: mapper_nrom.rs  mod.rs
src/ppu/: bitmap.rs  mod.rs  ppu.rs
src/rom_parser/: errors.rs  ines.rs  mod.rs
