[package]
name = "nessy"
version = "0.1.0"
authors = ["Ron Popov <DirtySlowpoke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.9.0"
native-windows-gui = {version="1.0.11", features=["extern-canvas", "animation-timer", "cursor", "notice", "status-bar"]}
native-windows-derive = {version="1.0.3"}
bmp = "0.5.0"